--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     //ktx activity
     implementation "androidx.activity:activity-ktx:1.4.0"
 
-    //jetpack
+    //layout
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
@@ -79,6 +79,9 @@ dependencies {
     implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.3"))
     implementation("com.squareup.okhttp3:okhttp")
     implementation("com.squareup.okhttp3:logging-interceptor")
+
+    //coil-kt
+    implementation("io.coil-kt:coil:1.4.0")
 
     //paging
     implementation "androidx.paging:paging-runtime:3.1.1"
