--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,9 @@ dependencies {
     //paging
     implementation "androidx.paging:paging-runtime:3.1.1"
 
+    //facebook shimmer
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
     //tests
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
